# chatgpt-bot

./: .gitignore  Dockerfile  hello.py  main.py  pyproject.toml  settings.py
adapters/: openai.py
