[project]
name = "chatgpt-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "discord-py>=2.4.0",
    "fastapi>=0.115.8",
    "openai>=1.62.0",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "pyright>=1.1.394",
    "ruff>=0.9.6",
]
